@@ -149,10 +149,15 @@
          Room for modal editScan
        </form>
      </div>
-     <div id="editFindingDialog" class='hidden'>
+     <div id="editFindingDialog" class='hidden wide'>
        <form id="editFinding">
          Room for modal editFinding
        </form>
+       <table id='findingHistory'>
+       	<tr><td>Room for findingHistory<br>
+	 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+	</td></tr>
+       </table>
      </div>
      <div id="modalDialog">
      </div>
